--- a/index.html
+++ b/index.html
@@ -5,22 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Gerenciador de Rifas</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <div class="container">
-        <div class="card text-center">
-            <div class="card-header">
-              Featured
+      <div class="card text-center">
+        <div class="card-header">
+          Login
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Faça Seu Login</h5>
+          <img class="card-img-top" src="img/rifa.png" alt="Rifa">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Login</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
             </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Senha</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
             </div>
-            <div class="card-footer text-muted">
-              2 days ago
-            </div>
-          </div>
+            <a href="sistema.html" type="submit" class="btn btn-primary">Entrar</a>
+          </form>
+        </div>
+        <div class="card-footer text-muted">
+         Retire sua Rifa
+        </div>
+      </div>
     </div>
     
     <script src="js/bootstrap.js"></script>
