--- a/sistema.html
+++ b/sistema.html
@@ -52,6 +52,8 @@
 
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="libs/sweetalert2-main/sweetalert2-main/src/sweetalert2.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
