--- a/src/conexao/visao/list-tipo.html
+++ b/src/conexao/visao/list-tipo.html
@@ -1,5 +1,5 @@
 <div class="row mt-5">
-    <div class="col-12">
+    <div class="col-12 mt-5">
         <div class="card shadow mt-5">
             <div class="card-hearder">
                 <div class="card-title">
@@ -16,18 +16,18 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-hover" id="table-tipo">
-                        <thead class="thead">
-                            <tr>
-                                <th scope="col" class="text-center">ID</th>
-                                <th scope="col" class="text-center">NOME</th>
-                                <th scope="col" class="text-center">AÇÃO</th>
-                            </tr>
-                        </thead>
-                    </table>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover" id="table-tipo">
+                            <thead class="thead">
+                                <tr>
+                                    <th scope="col" class="text-center">ID</th>
+                                    <th scope="col" class="text-center">NOME</th>
+                                    <th scope="col" class="text-center">AÇÃO</th>
+                                </tr>
+                            </thead>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
@@ -39,8 +39,25 @@
         <div class="modal-contend">
             <div class="modal-header">
                 <h5 class="modal-title" id="my-modal-title">Title</h5>
-                
+                <button class="close" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Content</p>
+            </div>
+            <div class="modal-footer">
+                <button id="close" class="btn btn-secondary"><i class="bx bxs-x-circule"></i> Fechat</button>
+                <button class="btn btn-success btn-primary btn-save"><i class="bx bxs-save"></i> Salvar</button>
             </div>
         </div>
     </div>
 </div>
+
+
+
+<script src="src/tipo/controle/new-tipo.js"></script>
+<script src="src/tipo/controle/save-tipo.js"></script>
+<script src="src/tipo/controle/list-tipo.js"></script>
+<script src="src/tipo/controle/view-tipo.js"></script>
+<script src="src/tipo/controle/delete-tipo.js"></script>
