--- a/index.html
+++ b/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema Gerenciador de Rifas</title>
+    <title>Rifas</title>
+    <link rel="shortcut icon" href="img/tickets.png" type="image">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="libs/fontawesome/css/all.css">
 </head>
+
 <body>
-    <div class="container">
-      <div class="card text-center">
-        <div class="card-header">
-          Login
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Faça Seu Login</h5>
-          <img class="card-img-top" src="img/rifa.png" alt="Rifa">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Login</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+
+    <div class="container mt-2">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 col-md-3">
+                <div class="card shadow mt-5">
+                    <img class="img-fluid" src="img/rifas.png" alt="e-rifas">
+                    <div class="card-body">
+                        <h5 class="card-title"><i><b>Login do sistema</b></i></h5>
+                        <form>
+                            <div class="form-group">
+                                <label>Login</label>
+                                <input type="text" name="login" id="" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Senha</label>
+                                <input type="password" name="senha" id="" class="form-control">
+                            </div>
+                            <div class="form-group row justify-content-end">
+                                <div class="col-12 col-sm-8 col-md-6">
+                                    <button class="btn btn-primary btn-block">Entrar</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Senha</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-            </div>
-            <a href="sistema.html" type="submit" class="btn btn-primary">Entrar</a>
-          </form>
         </div>
-        <div class="card-footer text-muted">
-         Retire sua Rifa
-        </div>
-      </div>
     </div>
-    
-    <script src="js/bootstrap.js"></script>
+
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
