--- a/sistema.html
+++ b/sistema.html
@@ -28,7 +28,7 @@
                     <a class="nav-link text-white" href="#"><i class="fa-solid fa-sack-dollar"></i> Vendedores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-comments-dollar"></i> Compradores</a>
+                    <a class="nav-link text-white" href="src/comprador/visao/list-comprador.html"><i class="fa-solid fa-comments-dollar"></i> Compradores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="src/tipo/visao/list-tipo.html"><i class="fa-solid fa-user"></i> Tipos de acesso</a>
