--- a/sistema.html
+++ b/sistema.html
@@ -25,7 +25,7 @@
                     <a class="nav-link text-white" href="#"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-sack-dollar"></i> Vendedores</a>
+                    <a class="nav-link text-white" href="src/vendedor/visao/list-vendedor.html"><i class="fa-solid fa-sack-dollar"></i> Vendedores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="src/comprador/visao/list-comprador.html"><i class="fa-solid fa-comments-dollar"></i> Compradores</a>
