--- a/sistema.html
+++ b/sistema.html
@@ -40,7 +40,7 @@
                     <a class="nav-link text-white" href="#"><i class="fa-solid fa-cart-arrow-down"></i> Prêmio</a>
                 </li>
             </ul>
-                <a class="nav-link text-white" href="#"><i class="fa-solid fa-right-from-bracket"></i> Sair do Sistema</a>
+                <a class="text-white" id="logout" href="#"><i class="fa-solid fa-right-from-bracket"></i> Sair do Sistema</a>
         </div>
     </nav>
 
@@ -61,5 +61,7 @@
     <script src="libs/fontawesome/js/all.js"></script>
     <script src="libs/DataTables/datatables.js"></script>
     <script src="libs/sweetAlert/dist/sweetalert2.all.js"></script>
+    <script src="src/vendedor/controle/validate-vendedor.js"></script>
+    <script src="src/vendedor/controle/logout-vendedor.js"></script>
 </body>
 </html>
