--- a/sistema.html
+++ b/sistema.html
@@ -34,7 +34,7 @@
                     <a class="nav-link text-white" href="src/tipo/visao/list-tipo.html"><i class="fa-solid fa-user"></i> Tipos de acesso</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-receipt"></i> Promoção</a>
+                    <a class="nav-link text-white" href="src/promocao/visao/list-promocao.html"><i class="fa-solid fa-receipt"></i> Promoção</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#"><i class="fa-solid fa-cart-arrow-down"></i> Prêmio</a>
