--- a/src/premio/visao/list-premio.html
+++ b/src/premio/visao/list-premio.html
@@ -6,7 +6,7 @@
                     <div class="row">
                         <div class="col-12 col-md-10">
                             <h4 class="text-dark">
-                                Gerenciar Prêmio
+                                Gerenciar prêmios
                             </h4>
                         </div>
                         <div class="col-12 col-md-2">
@@ -23,6 +23,7 @@
                                 <tr>
                                     <th scope="col" class="text-center">ID</th>
                                     <th scope="col" class="text-center">NOME</th>
+                                    <th scope="col" class="text-center">CELULAR</th>
                                     <th scope="col" class="text-center">AÇÕES</th>
                                 </tr>
                             </thead>
