--- a/src/premio/visao/form-premio.html
+++ b/src/premio/visao/form-premio.html
@@ -4,21 +4,17 @@
         <input type="text" name="NOME" id="NOME" class="form-control">
     </div>
     <div class="form-group">
-        <label>Celular</label>
-        <input type="tel" name="CELULAR" id="CELULAR" class="form-control">
+        <label>Descrição</label>
+        <textarea name="DESCRICAO" id="DESCRICAO" cols="30" rows="2"></textarea>
     </div>
     <div class="form-group">
-        <label>Login</label>
-        <input type="text" name="LOGIN" id="LOGIN" class="form-control">
-    </div>
-    <div class="form-group">
-        <label>Senha</label>
-        <input type="password" name="SENHA" id="SENHA" class="form-control">
+        <label>Valor</label>
+        <input type="text" name="VALOR" id="VALOR" class="form-control">
     </div>
     <div class="form-group">
         <label>Tipo de acesso</label>
-        <select name="TIPO_ID" id="TIPO_ID" class="form-control">
-            <option value="">Selecione o tipo de acesso</option>
+        <select name="PROMOCAO_ID" id="PROMOCAO_ID" class="form-control">
+            <option value="">Selecione o tipo de promoção</option>
         </select>
     </div>
     <input type="hidden" name="ID" id="ID">
